# Smart-Farm

./: README.md  fichier.c  fonction.c  fonction.h  main.c  makefile  prog  program  programme
gestionouvriers/gouv1/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  gouv1.glade.bak  gouv1.gladep
gestionouvriers/gouv1/autom4te.cache/: output.1  requests  traces.0  traces.1
gestionouvriers/gouv1/po/: Makefile  Makefile.in
gestionouvriers/gouv1/src/: Makefile  Makefile.am  Makefile.in  absentisme.c  absentisme.h  callbacks.c  callbacks.h  fonctions.c  fonctions.h  gouv1  interface.c.bak  interface.h.bak  liste_des_ouvriers.txt  main.c  tableau_absentisme.txt
gestionouvriers/gouv1/src/.deps/: absentisme.Po  callbacks.Po
